--- a/BmsWpf/Views/Forms/ContragentForm.xaml
+++ b/BmsWpf/Views/Forms/ContragentForm.xaml
@@ -3,35 +3,84 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BmsWpf.Views.Forms"
         xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
+        xmlns:intr="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d"
 
         Title="ContragentForm" Height="705.626" Width="631.15">
-<!--	<Window.DataContext>-->
-<!--		<viewModels:ContragentViewModel />-->
-<!--	</Window.DataContext>-->
+    <Window.DataContext>
+        <viewModels:ContragentFormViewModel />
+    </Window.DataContext>
+    <intr:Interaction.Triggers>
+        <intr:EventTrigger EventName="Loaded">
+            <intr:InvokeCommandAction Command="{Binding WindowLoaded}"/>
+        </intr:EventTrigger>
+    </intr:Interaction.Triggers>
 	<Grid Margin="0,3,4,1" Background="#FF2E3137">
 		<Label Content="Contragent" HorizontalAlignment="Left" Foreground="#FF97D4D3" FontSize="30" FontWeight="Bold" Margin="315,28,0,0" VerticalAlignment="Top"/>
-		<TextBox Name ="Name" Height="27" Margin="250,108,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text ="{Binding Name}"/>
-		<TextBox Name ="PersonalVatNumber" Height="27" Margin="250,154,42,0" Foreground="Gray"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text = "{Binding PersonalVatNumber}"/>
-		<TextBox Name="PersonalIndentityNumber" Height="27" Margin="250,200,42,0" Foreground="Gray"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text = "{Binding PersonalIndentityNumber}"/>
-		<TextBox Name ="Telephone"  Height="27" Margin="250,247,42,0" Foreground="Gray"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text ="{Binding Telephone}"/>
-		<TextBox Name="Email" Height="27" Margin="250,291,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding Email}"/>
-		<TextBox Name="PersonForContact" Height="27" Margin="250,332,42,0" Foreground="Gray"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding PersonForContact}"/>
-		<TextBox Name ="Address" Height="27" Margin="250,374,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text ="{Binding Address}"/>
-		<TextBox Name="BankDetails" Height="27"  Margin="250,423,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding BankDetails}"/>
-		<TextBox Name="Description" Height="86" Margin="250,468,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f" VerticalContentAlignment="Center" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding Description}"/>
-		<Button Content="Save" HorizontalAlignment="Left" Margin="329,602,0,0" VerticalAlignment="Top" Width="112" Background="#FF1D5A8C" Foreground="White" FontWeight="Bold" FontSize="16" Click="Save_Click" RenderTransformOrigin="-0.133,0.56"   />
-		<Button Content="Back" HorizontalAlignment="Left" Margin="465,602,0,0" VerticalAlignment="Top" Width="112" Foreground="White" Background="#FFAE3434" FontSize="16" FontWeight="Bold" Click="Back_Click" />
-		<Label Content="Company Name" Foreground="White" HorizontalAlignment="Left" Margin="75,108,0,0" VerticalAlignment="Top" Width="149"/>
-		<Label Content="VAT Number" Foreground="White" HorizontalAlignment="Left" Margin="75,154,0,0" VerticalAlignment="Top" Width="149"/>
-		<Label Content="Phone Number" Foreground="White" HorizontalAlignment="Left" Margin="75,244,0,0" VerticalAlignment="Top" Width="149"/>
-		<Label Content="Email" Foreground="White" HorizontalAlignment="Left" Margin="75,288,0,0" VerticalAlignment="Top" Width="149"/>
-		<Label Content="Personal Identity Number" Foreground="White" HorizontalAlignment="Left" Margin="75,200,0,0" VerticalAlignment="Top" Width="149"/>
-		<Label Content="Contact Person" Foreground="White" HorizontalAlignment="Left" Margin="75,329,0,0" VerticalAlignment="Top" Width="149"/>
-		<Label Content="Address" Foreground="White" HorizontalAlignment="Left" Margin="75,374,0,0" VerticalAlignment="Top" Width="149"/>
-		<Label Content="Bank Details" Foreground="White" HorizontalAlignment="Left" Margin="75,423,0,0" VerticalAlignment="Top" Width="149"/>
-		<Label Content="Notes" Foreground="White" HorizontalAlignment="Left" Margin="75,498,0,0" VerticalAlignment="Top" Width="149"/>
+        <Label Content="Company Name" Foreground="White" HorizontalAlignment="Left" Margin="75,108,0,0" VerticalAlignment="Top" Width="149"/>
+        <TextBox Name ="Name" 
+                 Height="27" 
+                 Margin="250,108,42,0" 
+                 Foreground="Gray"  
+                 BorderThickness="2"  
+                 BorderBrush="#313c4f"  
+                 TextAlignment="Center" 
+                 TextWrapping="Wrap" 
+                 VerticalAlignment="Top" 
+                 RenderTransformOrigin="0.323,-1.178" 
+                 Text ="{Binding Name}"/>
+        <Label Content="VAT Number" 
+               Foreground="White" 
+               HorizontalAlignment="Left" 
+               Margin="75,154,0,0" 
+               VerticalAlignment="Top" 
+               Width="149"/>
+        <TextBox Name ="PersonalVatNumber" 
+                 Height="27" 
+                 Margin="250,154,42,0" 
+                 Foreground="Gray"  
+                 BorderThickness="2" 
+                 BorderBrush="#313c4f"  
+                 TextAlignment="Center" 
+                 TextWrapping="Wrap" 
+                 VerticalAlignment="Top" 
+                 RenderTransformOrigin="0.323,-1.178" 
+                 Text = "{Binding PersonalVatNumber}"/>
+        <Label Content="Personal Identity Number" Foreground="White" HorizontalAlignment="Left" Margin="75,200,0,0" VerticalAlignment="Top" Width="149"/>
+        <TextBox Name="PersonalIndentityNumber" Height="27" Margin="250,200,42,0" Foreground="Gray"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text = "{Binding PersonalIndentityNumber}"/>
+        <Label Content="Phone Number" Foreground="White" HorizontalAlignment="Left" Margin="75,244,0,0" VerticalAlignment="Top" Width="149"/>
+        <TextBox Name ="Telephone"  Height="27" Margin="250,247,42,0" Foreground="Gray"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text ="{Binding Telephone}"/>
+        <Label Content="Email" Foreground="White" HorizontalAlignment="Left" Margin="75,288,0,0" VerticalAlignment="Top" Width="149"/>
+        <TextBox Name="Email" Height="27" Margin="250,291,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding Email}"/>
+        <Label Content="Contact Person" Foreground="White" HorizontalAlignment="Left" Margin="75,329,0,0" VerticalAlignment="Top" Width="149"/>
+        <TextBox Name="PersonForContact" Height="27" Margin="250,332,42,0" Foreground="Gray"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding PersonForContact}"/>
+        <Label Content="Address" Foreground="White" HorizontalAlignment="Left" Margin="75,374,0,0" VerticalAlignment="Top" Width="149"/>
+        <TextBox Name ="Address" Height="27" Margin="250,374,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text ="{Binding Address}"/>
+        <Label Content="Bank Details" Foreground="White" HorizontalAlignment="Left" Margin="75,423,0,0" VerticalAlignment="Top" Width="149"/>
+        <TextBox Name="BankDetails" Height="27"  Margin="250,423,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding BankDetails}"/>
+        <Label Content="Notes" Foreground="White" HorizontalAlignment="Left" Margin="75,498,0,0" VerticalAlignment="Top" Width="149"/>
+        <TextBox Name="Description" Height="86" Margin="250,468,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f" VerticalContentAlignment="Center" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding Description}"/>
+		<Button Content="Save" 
+                HorizontalAlignment="Left" 
+                Margin="329,602,0,0" 
+                VerticalAlignment="Top" 
+                Width="112" 
+                Background="#FF1D5A8C" 
+                Foreground="White" 
+                FontWeight="Bold" 
+                FontSize="16"
+                RenderTransformOrigin="-0.133,0.56"
+                Command="{Binding Save}"/>
+		<Button Content="Back" 
+                HorizontalAlignment="Left" 
+                Margin="465,602,0,0" 
+                VerticalAlignment="Top" 
+                Width="112" 
+                Foreground="White" 
+                Background="#FFAE3434" 
+                FontSize="16" 
+                FontWeight="Bold" 
+                Command="{Binding Back}"/>
 	</Grid>
 </Window>
