--- a/BmsWpf/Views/Forms/ContragentForm.xaml
+++ b/BmsWpf/Views/Forms/ContragentForm.xaml
@@ -7,7 +7,7 @@
         xmlns:intr="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d"
 
-        Title="ContragentForm" Height="705.626" Width="631.15">
+        Title="ContragentForm" Height="658.826" Width="479.683">
     <Window.DataContext>
         <viewModels:ContragentFormViewModel />
     </Window.DataContext>
@@ -16,30 +16,30 @@
             <intr:InvokeCommandAction Command="{Binding WindowLoaded}"/>
         </intr:EventTrigger>
     </intr:Interaction.Triggers>
-	<Grid Margin="0,3,4,1" Background="#FF2E3137">
-		<Label Content="Contragent" HorizontalAlignment="Left" Foreground="#FF97D4D3" FontSize="30" FontWeight="Bold" Margin="315,28,0,0" VerticalAlignment="Top"/>
-        <Label Content="Company Name" Foreground="White" HorizontalAlignment="Left" Margin="75,108,0,0" VerticalAlignment="Top" Width="149"/>
+    <Grid Margin="0,3,-6.4,-1.4" Background="#FF2E3137">
+        <Label Content="Contragent" HorizontalAlignment="Left" Foreground="#FF97D4D3" FontSize="30" FontWeight="Bold" Margin="155,10,0,0" VerticalAlignment="Top"/>
+        <Label Content="Company Name" Foreground="White" HorizontalAlignment="Left" Margin="86,108,0,0" VerticalAlignment="Top" Width="97"/>
         <TextBox Name ="Name" 
                  Height="27" 
-                 Margin="250,108,42,0" 
-                 Foreground="Gray"  
+                 Margin="207,108,92,0" 
                  BorderThickness="2"  
                  BorderBrush="#313c4f"  
                  TextAlignment="Center" 
                  TextWrapping="Wrap" 
                  VerticalAlignment="Top" 
+                 VerticalContentAlignment="Center"
                  RenderTransformOrigin="0.323,-1.178" 
                  Text ="{Binding Name}"/>
         <Label Content="VAT Number" 
                Foreground="White" 
                HorizontalAlignment="Left" 
-               Margin="75,154,0,0" 
+               Margin="106,154,0,0" 
                VerticalAlignment="Top" 
-               Width="149"/>
+               Width="77"/>
         <TextBox Name ="PersonalVatNumber" 
+                  VerticalContentAlignment="Center"
                  Height="27" 
-                 Margin="250,154,42,0" 
-                 Foreground="Gray"  
+                 Margin="207,154,92,0"  
                  BorderThickness="2" 
                  BorderBrush="#313c4f"  
                  TextAlignment="Center" 
@@ -47,40 +47,51 @@
                  VerticalAlignment="Top" 
                  RenderTransformOrigin="0.323,-1.178" 
                  Text = "{Binding PersonalVatNumber}"/>
-        <Label Content="Personal Identity Number" Foreground="White" HorizontalAlignment="Left" Margin="75,200,0,0" VerticalAlignment="Top" Width="149"/>
-        <TextBox Name="PersonalIndentityNumber" Height="27" Margin="250,200,42,0" Foreground="Gray"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text = "{Binding PersonalIndentityNumber}"/>
-        <Label Content="Phone Number" Foreground="White" HorizontalAlignment="Left" Margin="75,244,0,0" VerticalAlignment="Top" Width="149"/>
-        <TextBox Name ="Telephone"  Height="27" Margin="250,247,42,0" Foreground="Gray"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text ="{Binding Telephone}"/>
-        <Label Content="Email" Foreground="White" HorizontalAlignment="Left" Margin="75,288,0,0" VerticalAlignment="Top" Width="149"/>
-        <TextBox Name="Email" Height="27" Margin="250,291,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding Email}"/>
-        <Label Content="Contact Person" Foreground="White" HorizontalAlignment="Left" Margin="75,329,0,0" VerticalAlignment="Top" Width="149"/>
-        <TextBox Name="PersonForContact" Height="27" Margin="250,332,42,0" Foreground="Gray"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding PersonForContact}"/>
-        <Label Content="Address" Foreground="White" HorizontalAlignment="Left" Margin="75,374,0,0" VerticalAlignment="Top" Width="149"/>
-        <TextBox Name ="Address" Height="27" Margin="250,374,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text ="{Binding Address}"/>
-        <Label Content="Bank Details" Foreground="White" HorizontalAlignment="Left" Margin="75,423,0,0" VerticalAlignment="Top" Width="149"/>
-        <TextBox Name="BankDetails" Height="27"  Margin="250,423,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding BankDetails}"/>
-        <Label Content="Notes" Foreground="White" HorizontalAlignment="Left" Margin="75,498,0,0" VerticalAlignment="Top" Width="149"/>
-        <TextBox Name="Description" Height="86" Margin="250,468,42,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f" VerticalContentAlignment="Center" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding Description}"/>
-		<Button Content="Save" 
+        <Label Content="Personal Identity Number" Foreground="White" HorizontalAlignment="Left" Margin="43,200,0,0" VerticalAlignment="Top" Width="140"/>
+        <TextBox Name="PersonalIndentityNumber"
+                   VerticalContentAlignment="Center" Height="27" Margin="207,200,92,0" Foreground="Black"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text = "{Binding PersonalIndentityNumber}"/>
+        <Label Content="Phone Number" Foreground="White" HorizontalAlignment="Left" Margin="93,247,0,0" VerticalAlignment="Top" Width="90"/>
+        <TextBox Name ="Telephone"  VerticalContentAlignment="Center" Height="27" Margin="207,247,92,0" Foreground="Black"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text ="{Binding Telephone}"/>
+        <Label Content="Email" Foreground="White" HorizontalAlignment="Left" Margin="142,286,0,0" VerticalAlignment="Top" Width="41"/>
+        <TextBox Name="Email"  VerticalContentAlignment="Center" Height="27" Margin="207,291,92,0" Foreground="Black"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding Email}"/>
+        <Label Content="Contact Person" Foreground="White" HorizontalAlignment="Left" Margin="93,326,0,0" VerticalAlignment="Top" Width="90"/>
+        <TextBox Name="PersonForContact"  VerticalContentAlignment="Center" Height="27" Margin="207,332,92,0" Foreground="Black"  BorderThickness="2" BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding PersonForContact}"/>
+        <Label Content="Address" Foreground="White" HorizontalAlignment="Left" Margin="132,369,0,0" VerticalAlignment="Top" Width="51"/>
+        <TextBox Name ="Address"  Height="27" Margin="207,374,92,0" Foreground="Black"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text ="{Binding Address}"/>
+        <Label Content="Bank Details" Foreground="White" HorizontalAlignment="Left" Margin="111,423,0,0" VerticalAlignment="Top" Width="72"/>
+        <TextBox Name="BankDetails" Height="27"  Margin="207,423,92,0" Foreground="Black"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding BankDetails}"/>
+        <Label Content="Notes" Foreground="White" HorizontalAlignment="Left" Margin="136,494,0,0" VerticalAlignment="Top" Width="47"/>
+        <TextBox Name="Description" Height="68" Margin="207,468,92,0" Foreground="Black"  BorderThickness="2"  BorderBrush="#313c4f" VerticalContentAlignment="Center" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" Text="{Binding Description}"/>
+        <Button Content="Save" 
                 HorizontalAlignment="Left" 
-                Margin="329,602,0,0" 
+                Margin="192,573,0,0" 
                 VerticalAlignment="Top" 
-                Width="112" 
+                Width="71" 
                 Background="#FF1D5A8C" 
                 Foreground="White" 
                 FontWeight="Bold" 
                 FontSize="16"
                 RenderTransformOrigin="-0.133,0.56"
                 Command="{Binding Save}"/>
-		<Button Content="Back" 
+        <Button Content="Back" 
                 HorizontalAlignment="Left" 
-                Margin="465,602,0,0" 
+                Margin="293,573,0,0" 
                 VerticalAlignment="Top" 
-                Width="112" 
+                Width="67" 
                 Foreground="White" 
                 Background="#FFAE3434" 
                 FontSize="16" 
                 FontWeight="Bold" 
                 Command="{Binding Back}"/>
-	</Grid>
+        <Separator HorizontalAlignment="Left" Height="14" Margin="130,57,0,0" VerticalAlignment="Top" Width="225" RenderTransformOrigin="0.508,1.013">
+            <Separator.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleY="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform Y="-11.286"/>
+                </TransformGroup>
+            </Separator.RenderTransform>
+        </Separator>
+    </Grid>
 </Window>
