--- a/BmsWpf/Views/ChildWindows/MainInvoices.xaml
+++ b/BmsWpf/Views/ChildWindows/MainInvoices.xaml
@@ -3,24 +3,60 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BmsWpf.Views.ChildWindows"
+        xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
+        xmlns:intr="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d"
         Title="MainInvoices" Height="600" Width="750" FontSize="16" Background="#FF030F1D">
+    <Window.DataContext>
+        <viewModels:MainInvoicesViewModel />
+    </Window.DataContext>
+    <intr:Interaction.Triggers>
+        <intr:EventTrigger EventName="Loaded">
+            <intr:InvokeCommandAction Command="{Binding WindowLoaded}"/>
+        </intr:EventTrigger>
+    </intr:Interaction.Triggers>
     <Grid>
         <Label Content="INVOICES" HorizontalAlignment="Left" Margin="298,10,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" Background="#FF2E3137" Foreground="White"/>
-        <Button Name="SearchButton" Content="Search" HorizontalAlignment="Left" Margin="584,78,0,0" VerticalAlignment="Top" Width="100" Height="30" Click="SearchButton_Click"/>
-        <DataGrid Name="ClientInvoicesGrid" HorizontalAlignment="Left" Height="365" Margin="36,119,0,0" VerticalAlignment="Top" Width="648"/>
-        <TextBox Name="SearchTextBox" HorizontalAlignment="Left" Height="30" Margin="36,78,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="543"/>
-        <Menu HorizontalAlignment="Left" Height="22" Margin="36,38,0,0" VerticalAlignment="Top" Width="43" RenderTransformOrigin="0.562,0.65">
+        <Button Name="SearchButton" 
+                Content="Search" 
+                HorizontalAlignment="Left" 
+                Margin="584,78,0,0" 
+                VerticalAlignment="Top" 
+                Width="100" 
+                Height="30" 
+                Command="{Binding Search}"/>
+        <DataGrid Name="ClientInvoicesGrid" 
+                  HorizontalAlignment="Left" 
+                  Height="365" 
+                  Margin="36,119,0,0" 
+                  VerticalAlignment="Top" 
+                  Width="648"
+                  ItemsSource="{Binding Invoices}"
+                  SelectedItem="{Binding SelectedInvoice}"/>
+        <TextBox Name="SearchTextBox" 
+                 HorizontalAlignment="Left" 
+                 Height="30" 
+                 Margin="36,78,0,0" 
+                 TextWrapping="Wrap" 
+                 VerticalAlignment="Top" 
+                 Width="543"
+                 Text="{Binding SearchText}"/>
+        <Menu Name="ActionName" HorizontalAlignment="Left" Height="22" Margin="36,38,0,0" VerticalAlignment="Top" Width="43" RenderTransformOrigin="0.562,0.65">
             <MenuItem Header="Menu">
-                <MenuItem Header="Add client invoice" Click="AddClientInvoiceButton_Click"/>
-                <MenuItem Header="Edit client invoice" Click="EditClientInvoicesButton_Click"/>
-                <MenuItem Header="Add supplier invoice" Click="AddSupplierInvoiceButton_Click"/>
-                <MenuItem Header="Edit supplier invoice" Click="EditSupplierInvoiceButton_Click"/>
-                <MenuItem Header="Delete" Click="DeleteInvoiceButton_Click" />
+                <MenuItem Header="Add client invoice" Command="{Binding AddNewCI}"/>
+                <MenuItem Header="Edit client invoice" Command="{Binding EditCI}"/>
+                <MenuItem Header="Add supplier invoice"  Command="{Binding AddNewSI}"/>
+                <MenuItem Header="Edit supplier invoice"  Command="{Binding EditSI}"/>
+                <MenuItem Header="Delete"  Command="{Binding Delete}" />
             </MenuItem>
         </Menu>
-        <Button Name="BackButton" Content="Back" HorizontalAlignment="Left" Margin="584,512,0,0" VerticalAlignment="Top" Width="100" Height="30" Click="BackButton_OnClickButton_Click"/>
-
+        <Button Name="BackButton" 
+                Content="Back" 
+                HorizontalAlignment="Left" 
+                Margin="584,512,0,0" 
+                VerticalAlignment="Top" 
+                Width="100" 
+                Height="30"
+                Command="{Binding Back}"/>
     </Grid>
 </Window>
