--- a/BmsWpf/Views/Forms/InvoiceForm.xaml
+++ b/BmsWpf/Views/Forms/InvoiceForm.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="BmsWpf.Views.Forms.InvoiceClientForm"
+﻿<Window x:Class="BmsWpf.Views.Forms.InvoiceForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
